--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,6 +126,37 @@
         её передаваемой мощности.</string>
     <string name="name_block_home">Блоки ГТ</string>
     <string name="name_zero_vision">Vision Zero</string>
+    <string name="zero_vision_1">Стать лидером</string>
+    <string name="zero_vision_2">Выявлять угрозы</string>
+    <string name="zero_vision_3">Определять цели</string>
+    <string name="zero_vision_4">Создать систему безопасности и гигиены труда</string>
+    <string name="zero_vision_5">Обеспечить безопасность и гигиену на рабочих местах</string>
+    <string name="zero_vision_6">Повышать квалификацию</string>
+    <string name="zero_vision_7">Инвестировать в кадры</string>
+    <string name="zero_vision_11">показать приверженность принципам</string>
+    <string name="zero_vision_21">контролировать риски</string>
+    <string name="zero_vision_31">разрабатывать программы</string>
+    <string name="zero_vision_41">достичь высокого уровня организации</string>
+    <string name="zero_vision_51">при эксплуатации оборудования</string>
+    <string name="zero_vision_61">развивать профессиональные навыки</string>
+    <string name="zero_vision_71">мотивировать посредством участия</string>
+    <string name="zero_vision_supervisor">Руководитель работ \n(начальник участка, мастер):</string>
+    <string name="zero_vision_supervisor_1">
+        • Я подаю пример своим работникам для подражания и демонстрирую приверженность принципам безопасности и гигиены труда;\n\n
+        • Я следую правилам и использую средства индивидуальной защиты;\n\n
+        • Я немедленно реагирую на нарушение моим работником требований охраны труда и провожу инструктаж;\n\n
+        • Я не допускаю беспорядка и халатности на рабочем месте.\n
+    </string>
+    <string name="zero_vision_worker">Работник:</string>
+    <string name="zero_vision_worker_1">
+        • Я несу персональную ответственность за безопасное выполнение поставленных ему задач и безопасное рабочее место;\n\n
+        • Я соблюдаю инструкции (инструкции по охране труда, пожарной безопасности, технологические инструкции) и применяю безопасные методы труда;\n\n
+        • Я использую средства индивидуальной защиты и следую знакам безопасности;\n\n
+        • Я обращаюсь за помощью к своему руководителю при возникновении вопросов по безопасному проведению работ;\n\n
+        • Я применяю <b>«ПРАВО НА ПРИОСТАНОВКУ РАБОТ»</b> в случае выявления небезопасного проведения работ для предотвращения возможных происшествий;\n\n
+        • Я внимателен по отношению к безопасному выполнению работ другими работниками\n
+    </string>
+    <string name="zero_vision_danger">Опасность!</string>
 
 
 </resources>
