--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,5 +211,8 @@
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
+    <string name="channel_name_calendar_notes">Заметки календаря</string>
+    <string name="channel_name_description_calendar">График смен</string>
+
 
 </resources>
