--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,7 +230,7 @@
     <string name="reason_request_work">Причина заявки</string>
     <string name="additionally">Дополнение</string>
     <string name="heading_shift_schedule_extend_request_work">Продление заявки</string>
-    <string name="save">Сохранить</string>
+    <string name="save">Добавить</string>
     <string name="extend">Продлить</string>
     <string name="help_request_work_accession">
         Укажите наименование\nприсоединения.\nНапример: ВЛ-220кВ Мирадино,\n2СШ-220кВ
