--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -386,7 +386,7 @@
     <string name="i_el_motor_item_title">Ток: I, А</string>
     <string name="type_i_el_motor_item_title">I, А</string>
     <string name="type_rep">Тип REP</string>
-    <string name="switch_automat">Выключатель \n(автомат)</string>
+    <string name="switch_automat">Выключатель (автомат)</string>
     <string name="electric">Электроустановка</string>
     <string name="location">Место установки</string>
 
