--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -372,12 +372,12 @@
     <string name="electric_motor_title">Эл. двигатели и механизмы</string>
     <string name="ceh">Цех</string>
     <string name="performance_mechanism_title">Произв-ть: Q, м3/ч</string>
-    <string name="pressure_mechanism_title">Давление: P, кгс/см2</string>
+    <string name="pressure_mechanism_title">Давление: P, МПа</string>
     <string name="mechanism_h_title">Напор: H, м</string>
     <string name="mechanism_n_power_title">Мощность: N, кВт</string>
     <string name="mechanism_n_title">Кол-во об.: n, об/мин</string>
     <string name="type_performance_mechanism_title">Q, м3/ч</string>
-    <string name="type_pressure_mechanism_title">P, кгс/см2</string>
+    <string name="type_pressure_mechanism_title">P, МПа</string>
     <string name="type_mechanism_h_title">H, м</string>
     <string name="type_mechanism_n_power_title">N, кВт</string>
     <string name="type_mechanism_n_title">n, об/мин</string>
